# kaze

./: .clangd  .gitignore  CMakeLists.txt  README.md  Taskfile.yml  main.cpp
kaze/: CMakeLists.txt  ServiceProvider.h  concepts.h  core.hpp  debug.cpp  debug.h  endian.h  errors.cpp  errors.h  gfx.hpp  json.h  kaze.h  memory.cpp  memory.h  snd.hpp  tk.hpp  traits.h
kaze/app/: App.cpp  App.h  BackendInitGuard.cpp  BackendInitGuard.h  Camera2D.cpp  Camera2D.h  SpriteBatch.cpp  SpriteBatch.h  WindowMgr.h
kaze/audio/: AudioDevice.cpp  AudioDevice.h  AudioMarker.h  AudioSpec.h  AudioTime.cpp  AudioTime.h  CMakeLists.txt  FadePoint.h  SampleFormat.cpp  SampleFormat.h  SoundBuffer.cpp  SoundBuffer.h  lib.h
kaze/audio/backend/: module.cmake
kaze/audio/conv/: AudioDecoder.cpp  AudioDecoder.h  module.cmake
kaze/audio/engine/: AudioCommands.cpp  AudioCommands.h  AudioContext.cpp  AudioContext.h  AudioEffect.cpp  AudioEffect.h  AudioEngine.cpp  AudioEngine.h  AudioSource.cpp  AudioSource.h  Sound.cpp  Sound.h
kaze/core/: Action.h  AlignedAllocator.h  AlignedList.h  AssetLoader.h  CMakeLists.txt  CStringView.h  CommandQueue.h  ConditionalAction.h  Handle.h  HttpRequest.cpp  HttpRequest.h  HttpResponse.h  ImageContainer.h  ManagedMem.h  MemView.h  Memory.h  MultiPool.h  Optional.h  Pool.h  ServiceProvider.cpp  ServiceProvider.h  Window.cpp  Window.h  WindowConstants.h  concepts.h  debug.cpp  debug.h  endian.h  errors.cpp  errors.h  filesys.hpp  input.hpp  intrinsics.h  io.hpp  json.h  kmain.h  lib.h  lib.pch  main.h  math.hpp  (+5 more)
kaze/core/input/: Cursor.cpp  Cursor.h  CursorConstants.h  CursorMgr.cpp  CursorMgr.h  Gamepad.cpp  Gamepad.h  GamepadConstants.h  InputEvents.h  InputMgr.cpp  InputMgr.h  Keyboard.cpp  Keyboard.h  KeyboardConstants.cpp  KeyboardConstants.h  Mouse.cpp  Mouse.h  MouseConstants.h
kaze/core/io/: BufferIO.cpp  BufferIO.h  BufferView.cpp  BufferView.h  BufferWriter.cpp  BufferWriter.h  FileBuffer.cpp  FileBuffer.h  StructIO.cpp  StructIO.h  StructLayout.h  StructMap.h  io.cpp  io.h  module.cmake
kaze/core/macros/: enum.h  map.h
kaze/core/math/: Circle.h  Matrix.h  Rect.h  Rect3D.h  Vec.hpp  easings.h  geometry.h  mathf.cpp  mathf.h
kaze/core/platform/: BackendInitGuard.cpp  BackendInitGuard.h  backend.hpp  defines.h  module.cmake  plugin.cmake
kaze/core/video/: Color.cpp  Color.h  GraphicsMgr.cpp  GraphicsMgr.h  Image.cpp  Image.h  ImageHandle.cpp  ImageHandle.h  PixelFormat.cpp  PixelFormat.h  Renderable.cpp  Renderable.h  Shader.cpp  Shader.h  ShaderProgram.cpp  ShaderProgram.h  Texture2D.cpp  Texture2D.h  TextureHandle.cpp  TextureHandle.h  Uniform.cpp  Uniform.h  UniformMgr.cpp  UniformMgr.h  VertexLayout.h  Window.cpp  (+2 more)
kaze/gfx/: CMakeLists.txt  Camera2D.cpp  Camera2D.h  Color.cpp  Color.h  GraphicsMgr.cpp  GraphicsMgr.h  Image.cpp  Image.h  ImageHandle.cpp  ImageHandle.h  PixelFormat.cpp  PixelFormat.h  Renderable.cpp  Renderable.h  Shader.cpp  Shader.h  ShaderProgram.cpp  ShaderProgram.h  SpriteBatch.cpp  SpriteBatch.h  Texture2D.cpp  Texture2D.h  TextureHandle.cpp  TextureHandle.h  Uniform.cpp  Uniform.h  UniformMgr.cpp  UniformMgr.h  VertexLayout.cpp  VertexLayout.h  lib.h
kaze/graphics/: CMakeLists.txt  Color.h  GraphicsMgr.cpp  GraphicsMgr.h  Image.cpp  Renderable.cpp  Shader.cpp  Shader.h  ShaderProgram.cpp  ShaderProgram.h  Texture2D.cpp  Texture2D.h  TextureHandle.cpp  Uniform.cpp  Uniform.h  UniformMgr.h  VertexLayout.cpp
kaze/input/: Gamepad.cpp  Gamepad.h  GamepadConstants.h  InputEvents.h  InputMgr.cpp  InputMgr.h  Keyboard.cpp  Keyboard.h  KeyboardConstants.cpp  KeyboardConstants.h  Mouse.cpp  Mouse.h  MouseConstants.h
kaze/internal/: CMakeLists.txt
kaze/io/: BufferView.cpp  BufferView.h  FileBuffer.cpp  FileBuffer.h  io.cpp  io.h
kaze/macros/: enum.h  map.h
kaze/math/: Circle.h  Matrix.h  Rect.h  Rect3D.h  Vec.hpp  easings.h  geometry.h  mathf.h
kaze/platform/: Gamepad.cpp  Gamepad.h  Key.cpp  Key.h  Keyboard.cpp  Keyboard.h  Mouse.h  PlatformBackend.cpp  PlatformBackend.h  PlatformCallbacks.cpp  PlatformCallbacks.h  PlatformEvent.cpp  PlatformEvent.h  Window.cpp  Window.h  backend.cpp  backend.h  defines.h
kaze/shaders/: common.sc  spritebatch_f.sc  spritebatch_v.sc  varying.def.sc
kaze/snd/: AudioCommands.cpp  AudioCommands.h  AudioContext.cpp  AudioContext.h  AudioDevice.cpp  AudioDevice.h  AudioEffect.cpp  AudioEffect.h  AudioEngine.cpp  AudioEngine.h  AudioMarker.h  AudioSource.cpp  AudioSource.h  AudioSpec.h  AudioTime.cpp  AudioTime.h  CMakeLists.txt  FadePoint.h  SampleFormat.cpp  SampleFormat.h  Sound.cpp  Sound.h  SoundBuffer.cpp  SoundBuffer.h  lib.h
kaze/tk/: App.cpp  App.h  AppPlugin.h  AppPluginMgr.cpp  AppPluginMgr.h  CMakeLists.txt  Camera2D.cpp  Camera2D.h  FramerateCounter.cpp  FramerateCounter.h  SpriteBatch.cpp  SpriteBatch.h  lib.h  plugins.hpp
kaze/video/: Color.cpp  Color.h  GraphicsMgr.cpp  GraphicsMgr.h  Renderable.cpp  Renderable.h  Shader.cpp  Shader.h  ShaderProgram.cpp  ShaderProgram.h  Texture2D.cpp  Texture2D.h  Uniform.cpp  Uniform.h  UniformMgr.cpp  UniformMgr.h  VertexLayout.cpp  VertexLayout.h  Window.cpp  Window.h  WindowConstants.h
nova/: CMakeLists.txt  ServiceProvider.cpp  ServiceProvider.h  concepts.h  endian.h  json.h  logging.cpp  logging.h  nova.h
nova/graphics/: Color.cpp  Color.h
nova/macros/: enum.h  json.h  map.h
nova/math/: Circle.h  Matrix.h  Rect.h  Rect3D.h  Vec.hpp  easings.h  geometry.h  mathf.h
tests/: CMakeLists.txt
tests/kaze/: ServiceProvider.test.cpp  debug.tests.cpp
tests/nova/: ServiceProvider.test.cpp
tests/runtime/: 00_backend.cpp  01_app.cpp  02_ide.cpp  CMakeLists.txt  f_simple.h  plist.in  v_simple.h
tests/unit_tests/: CMakeLists.txt  tests.cpp
tools/: CMakeLists.txt  setup.bat  setup.ps1  setup.sh
tools/kserve/: README.md
tools/kshaderc/: CMakeLists.txt  common.h  main.cpp
tools/kz/: BuildSystem.cpp  BuildSystem.h  CMakeLists.txt  main.cpp
util/: CMakeLists.txt  setup.ps1  setup.sh
util/kserve/: README.md  index.js
util/kshaderc/: CMakeLists.txt  common.cpp  main.cpp
util/kz/: BuildSystem.cpp  CMakeLists.txt  main.cpp
(+598 files in other folders)
